--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js"
+    "test": "cucumber-js && jest",
+    "test:single": "jest --testPathPattern=features/successful_login.feature"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@cucumber/cucumber": "^10.4.0",
-    "chai": "^5.1.0"
-  },
-  "dependencies": {
+    "@cucumber/cucumber": "^10.5.1",
+    "chai": "^5.1.0",
     "chromedriver": "^123.0.3",
+    "cucumber": "^6.0.7",
+    "jest": "^29.7.0",
     "selenium-webdriver": "^4.19.0"
   }
 }
