--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai": "^5.1.0",
     "chromedriver": "^123.0.3",
     "cucumber": "^6.0.7",
+    "eslint-plugin-react": "^7.34.1",
     "jest": "^29.7.0",
     "selenium-webdriver": "^4.19.0"
   }
